--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "expo": "~48.0.18",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "expo-image-picker": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
